
- cURL:
  . Fixed bug #68739 (Missing break / control flow). (Laruence)

- Ereg:
  . Fixed bug #68740 (NULL Pointer Dereference). (Laruence)

- ODBC:
  . Fixed bug #69354 (Incorrect use of SQLColAttributes with ODBC 3.0).
    (Anatol)

- OPCache:
  . Fixed bug #69281 (opcache_is_script_cached no longer works). (danack)
  . Fixed bug #68677 (Use After Free). (CVE-2015-1351) (Laruence)

- Sqlite3:
  . Fixed bug #66550 (SQLite prepared statement use-after-free). (Sean Heelan)

?? ??? 2015, PHP 5.5.24

- Apache2handler:
  . Fixed bug #69218 (potential remote code execution with apache 2.4
    apache2handler). (Gerrit Venema)

- Core:
  . Fixed bug #66609 (php crashes with __get() and ++ operator in some cases).
    (Dmitry, Laruence)
  . Fixed bug #67626 (User exceptions not properly handled in streams). 
    (Julian)
  . Fixed bug #68021 (get_browser() browser_name_regex returns non-utf-8
    characters). (Tjerk)
  . Fixed bug #68917 (parse_url fails on some partial urls). (Wei Dai)
  . Fixed bug #69134 (Per Directory Values overrides PHP_INI_SYSTEM
    configuration options). (Anatol Belski)
  . Additional fix for bug #69152 (Type confusion vulnerability in
    exception::getTraceAsString). (Stas)
  . Fixed bug #69212 (Leaking VIA_HANDLER func when exception thrown in
    __call/... arg passing). (Nikita)
  . Fixed bug #69221 (Segmentation fault when using a generator in combination
    with an Iterator). (Nikita)
  . Fixed bug #69337 (php_stream_url_wrap_http_ex() type-confusion
    vulnerability). (Stas)
  . Fixed bug #69353 (Missing null byte checks for paths in various PHP
    extensions). (Stas)

- Date:
  . Export date_get_immutable_ce so that it can be used by extensions. (Derick
    Rethans)
  . Fixed bug #69336 (Issues with "last day of <monthname>"). (Derick Rethans)

- Curl:
  . Implemented FR#69278 (HTTP2 support). (Masaki Kagaya)
  . Fixed bug #69316 (Use-after-free in php_curl related to
    CURLOPT_FILE/_INFILE/_WRITEHEADER). (Laruence)

- Enchant: